--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@
 /MetroRadiance/MetroRadiance/obj
 /MetroRadiance/MetroRadiance.Chrome/obj
 /MetroRadiance/MetroRadiance.Core/obj
+/Tools/Json_Api_Prase/bin
+/Tools/Json_Api_Prase/obj
