--- a/FlowerWrapper/packages.config
+++ b/FlowerWrapper/packages.config
@@ -2,4 +2,6 @@
 <packages>
   <package id="log4net" version="2.0.3" targetFramework="net452" />
   <package id="Nekoxy" version="1.5.2.20" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
+  <package id="zlib.net" version="1.0.4.0" targetFramework="net452" />
 </packages>
