Add Volume Control

--- a/FlowerViewer/FlowerViewer.csproj
+++ b/FlowerViewer/FlowerViewer.csproj
@@ -84,6 +84,7 @@
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="ViewModels\NavigatorViewModel.cs" />
     <Compile Include="ViewModels\StartContentViewModel.cs" />
+    <Compile Include="ViewModels\VolumeViewModel.cs" />
     <Compile Include="ViewModels\WindowViewModel.cs" />
     <Compile Include="Views\Behaviors\NavigatorBehavior.cs" />
     <Compile Include="Views\BrowserNavigator.xaml.cs">
